force-app/main/default/objects/OneCRM__PaymentSecurity__c/OneCRM__PaymentSecurity__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>PaymentSecurity</label>
</CustomObject>