force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__CreditCard_TESTMode__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__CreditCard_TESTMode__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Forces all credit card transactions to be send to a test server.</inlineHelpText>
    <label>CreditCard TESTMode</label>
    <type>Checkbox</type>
</CustomField>