force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__Include_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Include_Address_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include address fields when sending payment to processor.</description>
    <inlineHelpText>Card may be declined if the address is not an exact match.</inlineHelpText>
    <label>Include Address Fields</label>
    <type>Checkbox</type>
</CustomField>