force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__Payment_Program_Schedule_Offset__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Program_Schedule_Offset__c</fullName>
    <label>Payment Program Schedule Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>