force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__Payment_Tool__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Payment_Tool__c</fullName>
    <defaultValue>&quot;AuthorizeNet&quot;</defaultValue>
    <inlineHelpText>AuthorizeNet
Paypal
USAepay
VirtualMerchant</inlineHelpText>
    <label>Payment Tool</label>
    <length>50</length>
    <type>Text</type>
</CustomField>