force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__payPalProcessor_Id__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__payPalProcessor_Id__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Processor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>