force-app/main/default/objects/OneCRM__PaymentSecurity__c/fields/OneCRM__userKey__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__userKey__c</fullName>
    <label>User Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>